Energy and virial computation made optional - Also: change in Julia module file name from EmDee.jl to libemdee.jl

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,10 @@
 lib/
 src/obj/
-test/testfortran
-test/testc
 equations/build/
 tools/
-
 test/
-
-*~
-src/compute_pair.f90
-src/compute_bond.f90
+src/compute_*.f90
 src/models.f90
-src/compute_angle.f90
-src/compute_dihedral.f90
 include/
 *.gcno
 *.gcda
