--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
       env: VERSION=6 DEBUG=1 COVERAGE=1
 
 script:
-  - make -j 2 CC=gcc-$VERSION FORT=gfortran-$VERSION runtests
+  - make -j 2 CC=gcc-$VERSION FORT=gfortran-$VERSION test
 
 after_success:
   - |
