--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
   include:
 
     - os: linux
-      compiler: gcc
+      compiler: gcc-6
       addons: &gfortran5
         apt:
           sources: ubuntu-toolchain-r-test
@@ -19,12 +19,12 @@ matrix:
       env: VERSION=5 DEBUG=0 COVERAGE=0
 
     - os: linux
-      compiler: gcc
+      compiler: gcc-5
       addons: *gfortran5
       env: VERSION=5 DEBUG=1 COVERAGE=0
 
     - os: linux
-      compiler: gcc
+      compiler: gcc-6
       addons: &gfortran6
         apt:
           sources: ubuntu-toolchain-r-test
@@ -34,7 +34,7 @@ matrix:
       env: VERSION=6 DEBUG=0 COVERAGE=0
 
     - os: linux
-      compiler: gcc
+      compiler: gcc-6
       addons: *gfortran6
       env: VERSION=6 DEBUG=1 COVERAGE=1
 
